add hspec-megaparsec; try parsing double colons in title

--- a/bridge-notation-parser.cabal
+++ b/bridge-notation-parser.cabal
@@ -78,6 +78,7 @@ test-suite bnp-test
       base
     , bridge-notation-parser
     , hspec
+    , hspec-megaparsec
     , megaparsec
     , record-hasfield
     , rio
